Added Animation, main activity, about me and hobby, TODO: fav images and photos

--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -6,4 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".MainScreen">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/aboutmeimg" />
+
+    <Button
+        android:id="@+id/btn_about"
+        android:layout_width="128dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginBottom="32dp"
+        android:text="About me"
+        app:layout_constraintBottom_toTopOf="@+id/btn_photos"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_hobby"
+        android:layout_width="128dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="32dp"
+        android:text="Hobby"
+        app:layout_constraintBottom_toTopOf="@+id/btn_fav"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btn_photos"
+        android:layout_width="128dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginBottom="64dp"
+        android:text="Photos"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_fav"
+        android:layout_width="128dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="64dp"
+        android:text="Favorite images"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
