--- a/app/src/main/res/layout/activity_fav.xml
+++ b/app/src/main/res/layout/activity_fav.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutMe">
+    tools:context=".Fav">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -16,35 +16,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/hobby" />
+        app:srcCompat="@drawable/aboutmeimg" />
 
-    <TextView
-        android:id="@+id/tv_hobbyTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
-        android:text="Hobby"
-        android:textColor="@color/black"
-        android:textSize="64sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_hobby"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2" />
-
-    <TextView
-        android:id="@+id/tv_hobby"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="32dp"
-        android:fontFamily="@font/roboto_bold"
-        android:paddingHorizontal="12sp"
-        android:text="@string/hobbytxt"
-        android:textAlignment="textEnd"
-        android:textSize="24sp"
+    <GridView
+        android:id="@+id/gv_photos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="64dp"
+        android:columnWidth="150dp"
+        android:fadingEdgeLength="0px"
+        android:horizontalSpacing="0dp"
+        android:listSelector="@null"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/btn_back"
